devops/specs/ui-admin/ui-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-admin
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-admin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui-admin
    spec:
      containers:
        - name: ui-admin
          image: eu.gcr.io/the-mesh-254617/ui-admin-design:db5ae3a-1619166112537 # {"$imagepolicy": "flux-system:ui-admin-design"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
