devops/specs/ui-admin/ui-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-admin
  namespace: ui
  labels:
    app: ui-admin
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: ui-admin
