devops/specs/ui-admin/ui-admin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ui-admin
  namespace: ui
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ui-admin-tls
      hosts:
        - 'ui-admin.ui.atls.tech'
